Add proper FadeIn and FadeOut Animation for items

--- a/Cafeine/Page_Resources/CollectionTemplate.xaml
+++ b/Cafeine/Page_Resources/CollectionTemplate.xaml
@@ -5,21 +5,37 @@
     x:Class="Cafeine.DataTemplates">
     <DataTemplate x:Name="WatchingCollection" x:DataType="local:UserItemCollection">
         <RelativePanel Width="120" Height="250" >
-            <Image x:Name="theimage" PointerEntered="Enter" Source="{x:Bind Imgurl}" MaxHeight="170" HorizontalAlignment="Center" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="3,3,3,5">
-                <Image.Resources>
+            <Grid x:Name="quickstatus" PointerEntered="ImageEntered" PointerExited="ImageExited" Height="170" Width="120" Margin="3,3,3,0" HorizontalAlignment="Center" Canvas.ZIndex="1" Opacity="0">
+                <Grid.Resources>
                     <Storyboard x:Name="ImageOnHover">
-                        <DoubleAnimation Storyboard.TargetName="theimage" Storyboard.TargetProperty="Opacity" From="1.0" To="0.0" Duration="0:0:0.25">
+                        <DoubleAnimation Storyboard.TargetName="quickstatus" Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.15">
                             <DoubleAnimation.EasingFunction>
                                 <CubicEase EasingMode="EaseOut"/>
                             </DoubleAnimation.EasingFunction>
                         </DoubleAnimation>
                     </Storyboard>
-                </Image.Resources>
-            </Image>
-            <TextBlock x:Name="thetitle" Margin="3,0" Text="{x:Bind Item_Title}" x:Phase="1" FontFamily="ms-appx:/Font/Ubuntu-C.ttf#Ubuntu" FontSize="15" RelativePanel.Below="theimage" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF272525"/>
+                    <Storyboard x:Name="ImageOffHover">
+                        <DoubleAnimation Storyboard.TargetName="quickstatus" Storyboard.TargetProperty="Opacity" From="1" To="0" Duration="0:0:0.15">
+                            <DoubleAnimation.EasingFunction>
+                                <CubicEase EasingMode="EaseIn"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </Grid.Resources>
+                <Rectangle x:Name="black" Fill="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.7"/>
+                <Grid HorizontalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock x:Name="myscore" Grid.Row="0" Text="{x:Bind My_score}" x:Phase="1" VerticalAlignment="Center" FontFamily="Segoe UI Semilight" FontWeight="SemiLight" Foreground="White"/>
+                    <TextBlock x:Name="Myepisode" Grid.Row="1" Text="{x:Bind My_watch}" x:Phase="1" VerticalAlignment="Center" FontFamily="Segoe UI Semilight" FontWeight="SemiLight" Foreground="White"/>
+                </Grid>
+            </Grid>
+            <Image x:Name="theimage" Source="{x:Bind Imgurl}" MaxHeight="170" HorizontalAlignment="Center" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="3,3,3,5"/>
+            <TextBlock x:Name="thetitle" Margin="3,0" Text="{x:Bind Item_Title}" x:Phase="1" FontFamily="ms-appx:/Font/Ubuntu-C.ttf#Ubuntu" FontSize="15" RelativePanel.Below="quickstatus" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF272525"/>
             <TextBlock x:Name="series_start" Text="{x:Bind Series_start}" Margin="3,0" x:Phase="1" FontFamily="ms-appx:/Font/Ubuntu-C.ttf#Ubuntu" FontSize="15" RelativePanel.Below="thetitle" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF272525"/>
-            <TextBlock x:Name="myscore" Text="{x:Bind My_score}" RelativePanel.AlignVerticalCenterWith="theimage" RelativePanel.AlignHorizontalCenterWith="theimage" x:Phase="1" FontFamily="Segoe UI Semilight" FontWeight="SemiLight" Foreground="White"/>
-            <TextBlock x:Name="Myepisode" Text="{x:Bind My_watch}" RelativePanel.Below="myscore"  RelativePanel.AlignHorizontalCenterWith="theimage" x:Phase="1" FontFamily="Segoe UI Semilight" FontWeight="SemiLight" Foreground="White"/>
+
         </RelativePanel>
     </DataTemplate>
     <ListViewItemPresenterCheckMode x:Key="GridViewItemCheckMode">Inline</ListViewItemPresenterCheckMode>
