--- a/Cafeine/Pages/Shell.xaml
+++ b/Cafeine/Pages/Shell.xaml
@@ -41,6 +41,7 @@
                         </Button.Flyout>
                     </Button>
                     <Button x:Name="AddCollection" FontFamily="{ThemeResource SymbolThemeFontFamily}" FontSize="20" Height="48" Content="" Background="{x:Null}" Width="48" RelativePanel.Below="HamBut" RelativePanel.AlignRightWith="HamBut" Click="AddCollection_Click" ToolTipService.ToolTip="Add collection"/>
+                    <Button x:Name="BackBut"   FontSize="20" Height="48" VerticalAlignment="Top" RelativePanel.Below="AddCollection" RelativePanel.AlignRightWith="AddCollection" Click="Backbutton" Content="" FontFamily="{ThemeResource SymbolThemeFontFamily}" Background="{x:Null}" Width="48"/>
                 </RelativePanel>
             </SplitView.Pane>
         </SplitView>
