--- a/Cafeine/Pages/MoreDetails.xaml
+++ b/Cafeine/Pages/MoreDetails.xaml
@@ -5,8 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="70,0,0,0">
-        <Button x:Name="BackBut"  FontSize="15" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left" Click="backbutton" Content="" FontFamily="{ThemeResource SymbolThemeFontFamily}" Background="{x:Null}" Width="48" Margin="-60,66,0,0" />
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <RelativePanel>
             <TextBlock x:Name="Title" FontFamily="Segoe UI" FontWeight="Thin" FontSize="25" Text="Kobayashi-san Chi no Maid Dragon"  RelativePanel.RightOf="image"  HorizontalAlignment="Left" Height="40" Padding="10,0,0,0" Margin="0,27,0,0" VerticalAlignment="Top" />
             <TextBlock x:Name="User_Rating" Text="8" RelativePanel.RightOf="image" RelativePanel.Below="Title" HorizontalAlignment="Left" Width="271" Height="31" Padding="10,0,0,0" VerticalAlignment="Top" />
